# fcitx-ui-light

./: .gitignore  CMakeLists.txt  fcitx-ui-light_0.1.2.orig.tar.bz2.delta  fcitx-ui-light_0.1.2.orig.tar.bz2.id  fcitx-ui-light_0.1.3.orig.tar.bz2.delta  fcitx-ui-light_0.1.3.orig.tar.bz2.id
data/: fcitx-light-ui.desc  fcitx-light.desktop.in
debian/: changelog  control  copyright  fcitx-ui-light.lintian-overrides  rules  watch
debian/patches/: 0001-dont-display-desktop-file.patch  01-traywindow_none.patch  02-remove_cairo_include.patch  series
po/: CMakeLists.txt  POTFILES.in.in  fcitx-light-ui.pot  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  MenuWindow.c  MenuWindow.h  TrayWindow.c  TrayWindow.h  draw.c  draw.h  font.c  font.h  lightui.c  lightui.h  lightuiconfig.c  tray.c  tray.h
xpm/: active.xpm  inactive.xpm
